<resources>
    <string name="app_name">친구랑운동</string>

    <string name="facebook_app_id">1099410106836082</string>

    <string name="join">이메일로 회원가입</string>
    <string name="login">로그인</string>

    <string name="nickname">닉네임</string>
    <string name="email">이메일 주소</string>
    <string name="phone">휴대폰 번호</string>
    <string name="password">비밀번호</string>
    <string name="auto_login">자동 로그인</string>

    <string name="info_phone">휴대폰 번호는 개인 식별 용도 외에는 사용되지 않습니다.</string>
    <string name="password_chk">비밀번호 확인</string>
    <string name="height_unit">cm</string>
    <string name="weight_unit">kg</string>
    <string name="height">키</string>
    <string name="weight">몸무게</string>
    <string name="info_bmi">BMI지수</string>
    <string name="wannabeKg">목표 체중</string>
    <string name="age_unit">세</string>
    <string name="group_name">그룹명 | </string>
    <string name="invite_sms">문자로 초대하기</string>
    <string name="wait">초대 승인을 기다리고 있습니다.</string>
    <string name="settings_to_dev">개발자에게 문의하기</string>
    <string name="settings_account">계정 관리</string>
    <string name="settings_push">푸시알림 설정</string>
    <string name="mypage">마이페이지</string>
    <string name="group_add">그룹 만들기</string>
    <string name="group_startday">활동시작일 | </string>


    <string name="when_group_start">멤버 전원이 가입하여 시작 체중 인증샷을 올리면\n그룹 활동이 시작됩니다!</string>
    <string name="date_pick">날짜 선택</string>
    <string name="group_member">그룹 멤버 수 | </string>
    <string name="person_unit">명</string>
    <string name="group_name_sample">끝나고 치킨먹자</string>
    <string name="group_img">그룹 이미지 설정</string>
    <string name="weigh_start">시작 체중 인증하기</string>
    <string name="input_weight">체중 입력</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="input_picture">인증샷을 입력해 주세요</string>
    <string name="weight_today">오늘의 체중 :</string>
    <string name="waiting_info">초대자 가입대기중</string>
    <string name="beforeAuth_info">인증전</string>
    <string name="group_search">그룹 검색</string>
    <string name="title_activity_get_planet">GetPlanetActivity</string>
    <string name="write">글쓰기</string>
    <string name="group_activeday">활동기간 | </string>
    <string name="comment_title">댓글 보기</string>
    <string name="input_init">기본 정보 입력</string>
    <string name="max_group">그룹은 최대 5개까지 소속될 수 있습니다.</string>
    <string name="already_manager">그룹은 하나만 생성할 수 있습니다.</string>
    <string name="copy">그룹아이디 복사</string>
    <string name="info_3day_destroy">그룹 생성일로부터 3일 후 그룹 인원이 채워지지 않거나 인증이 달성되지 않은 경우 그룹은 자동으로 삭제됩니다.</string>
    <string name="period_choice">기간 선택</string>
    <string name="search_info">그룹 ID를 정확하게 입력하셔야 합니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
