<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.google.slashb410.exgroup.ui.join.Input2Activity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/nickname"
        android:inputType="text"
        android:hint="@string/nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_big" />
    <EditText
        android:inputType="phone"
        android:id="@+id/phone_number"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_big" />
    <TextView
        android:text="@string/info_phone"
        android:layout_width="match_parent"
        android:textSize="@dimen/text_small"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:text="다음으로"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/nextBtn2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/gmd_button_height"
        android:layout_margin="@dimen/gmd_button_margin"/>

</RelativeLayout>
