<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input_init1"
    android:background="#eeeeee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.google.slashb410.exgroup.ui.join.InputInit1Activity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/gmd_margin_default"
                android:gravity="end|center_vertical"
                android:text="나이"
                android:textSize="@dimen/text_default" />

            <EditText

                android:id="@+id/age_join"
                android:layout_width="0dp"
                android:layout_height="@dimen/text_big"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_default"
                android:text="@string/age_unit"
                android:textSize="@dimen/text_default" />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/gmd_margin_default"
                android:gravity="end|center_vertical"
                android:text="키"
                android:textSize="@dimen/text_default" />

            <EditText
                android:id="@+id/height_join"
                android:layout_width="0dp"
                android:layout_height="@dimen/text_big"
                android:layout_weight="1"
                android:hint="@string/height"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_default"
                android:text="@string/height_unit" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/gmd_margin_default"
                android:gravity="end|center_vertical"
                android:text="키"
                android:textSize="@dimen/text_default" />

            <EditText
                android:id="@+id/weight_join"
                android:layout_width="0dp"
                android:layout_height="@dimen/text_big"
                android:layout_weight="1"
                android:hint="@string/weight"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_default"
                android:text="@string/weight_unit" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/nextBtn3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/gmd_button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/gmd_button_margin"
        android:background="@drawable/button_white"
        android:text="다음으로" />
</RelativeLayout>
