<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.google.slashb410.exgroup.ui.join.JoinActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_join"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_big"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_join"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_big"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password_check_join"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_big"
            android:hint="@string/password_chk"
            android:inputType="textPassword" />



    </LinearLayout>


    <Button          style="?android:attr/borderlessButtonStyle"
        android:id="@+id/nextBtn1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/gmd_button_height"
        android:background="@drawable/button_white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/gmd_button_margin"
        android:text="다음으로" />

</RelativeLayout>
