<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyPink"
    android:orientation="vertical"
    tools:context="com.google.slashb410.exgroup.ui.EnterActivity">

    <!--<ImageView-->
        <!--android:id="@+id/imageView4"-->
        <!--android:layout_width="72dp"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="@dimen/gmd_bar_height"-->
        <!--android:src="@drawable/title_logo" />-->

    <ImageView
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/enter"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_edit">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/gmd_bar_height"
                    android:layout_height="@dimen/gmd_bar_height"
                    android:background="#ffffff"
                    android:padding="16dp"
                    android:src="@drawable/person_gray" />

                <com.google.slashb410.exgroup.util.ClearEditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_big"
                    android:background="#ffffff"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/gmd_margin_default"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/gmd_bar_height"
                    android:layout_height="@dimen/gmd_bar_height"
                    android:background="#ffffff"
                    android:padding="16dp"
                    android:src="@drawable/password_gray" />

                <com.google.slashb410.exgroup.util.ClearEditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_big"
                    android:background="#ffffff"
                    android:colorControlActivated="@color/colorAccent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingEnd="@dimen/gmd_margin_default"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_default" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="@dimen/gmd_margin_default"
            android:layout_marginTop="@dimen/gmd_margin_default"
            android:background="@drawable/button_white"
            android:text="@string/login"
            android:textColor="#333333" />

        <Button
            android:id="@+id/joinBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gmd_big_button"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="@dimen/gmd_margin_default"
            android:background="@drawable/button_pink"
            android:text="@string/join"
            android:textColor="#ffffff" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gmd_bar_height"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_facebook"
            android:paddingBottom="18dp"
            android:paddingEnd="18dp"
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:textSize="@dimen/text_default" />

    </LinearLayout>

</LinearLayout>

